--- a/style.css
+++ b/style.css
@@ -6,11 +6,17 @@ body {
   font-family: sans-serif;
 }
 
+header {
+  text-align: center;
+}
+
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  max-width: 40rem;
+  margin: 0 auto;
 }
 
 main ul {
